Upload developer birthday list file and store
