# app/Http/Controllers/Api/v1/CakeEventController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers\Api\v1;
 use App\Http\Resources\CakeEventResource;
 use App\Http\Traits\ResponseTrait;
 use App\Models\CakeEvent;
+use App\Models\Developer;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
@@ -59,6 +60,65 @@ class CakeEventController extends Controller
         try {
             $upcomingCakeEvent = CakeEvent::where('cake_date', '>=', Carbon::now())->get();
             return $this->successResponse(new CakeEventResource($upcomingCakeEvent));
+        } catch (Exception $exception) {
+            return $this->errorResponse($exception->getMessage(), $exception->getCode());
+        }
+    }
+
+
+    #[OA\Post(
+        path: "/api/v1/birthday/upload",
+        summary: "Upload developer's birthday list",
+        requestBody: new OA\RequestBody(
+            required: true,
+            content: new OA\MediaType(
+                "multipart/form-data",
+                schema: new OA\Schema(
+                    properties: [
+                        new OA\Property(
+                            property: 'birthday_file',
+                            format: 'file'
+                        ),
+                    ]
+                )
+            ),
+        ),
+        tags: ['CakeEvent'],
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: 'OK',
+                content: new OA\JsonContent(
+                    properties: [
+                        new OA\Property(property: 'success', type: 'boolean'),
+                        new OA\Property(property: 'errorCode', type: 'string'),
+                        new OA\Property(property: 'message', type: 'string'),
+                        new OA\Property(
+                            property: 'data', type: 'array', items: new OA\Items(properties: [])
+                        ),
+                    ],
+                    type: 'object'
+                )
+            )
+        ]
+    )]
+    public function uploadDeveloperBirthDay(Request $request): JsonResponse
+    {
+        try {
+            $file = $request->file('birthday_file', null);
+
+            if (!$file) {
+                return $this->errorResponse("Please upload a file", 422);
+            }
+            $content = file($file->getRealPath());
+            foreach ($content as $line) {
+                [$name, $birth_date] = explode(',', trim($line));
+                Developer::updateOrCreate([
+                    'name' => $name,
+                    'birth_date' => $birth_date,
+                ]);
+            }
+            return $this->successResponse([], "Birthday file data successfully stored");
         } catch (Exception $exception) {
             return $this->errorResponse($exception->getMessage(), $exception->getCode());
         }
